--- a/package.json
+++ b/package.json
@@ -11,21 +11,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.1.0",
-    "@angular/common": "~7.1.0",
+    "@angular/animations": "^7.2.15",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "^7.2.16",
     "@angular/compiler": "~7.1.0",
-    "@angular/core": "~7.1.0",
-    "@angular/forms": "~7.1.0",
+    "@angular/core": "^7.2.16",
+    "@angular/forms": "^7.2.16",
+    "@angular/http": "^7.2.16",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
-    "@angular/router": "~7.1.0",
+    "@angular/router": "^7.2.16",
+    "@auth0/angular-jwt": "^2.1.0",
     "alertifyjs": "^1.14.0",
     "bootstrap": "^5.3.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "ol": "^5.3.3",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^1.9.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
